# googleapiutils2

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/: PUBLISHING.md
.github/workflows/: publish.yml  release.yml  test-publish.yml
docs/refactoring/: admin.md  architecture.md  drive.md  groups.md  mail.md  permissions.md  sheets.md
examples/: __tmp2.py  align_columns.py  delete_files.py  dns-report-template.md  dns.py  dns_analysis.py  drive_to_sheets.py  drive_upload.py  formatting.py  get_creds.py  mail.py  markdown.py  modify_doc_with_emoji.py  monitor.py  oauth2_create_doc.py  pallets.py  reconcile_school_names.py  resumes.py  runzero.py  school_wifi_share.py  sheets_crud.py  sync.py  tag_frns.py  tmp.py  tmp_drive.py  tmp_sheets.py
examples/dns_analysis/: template.md
examples/dns_analysis/src/: __main__.py  utils.py
googleapiutils/: drive.py  geocode.py  sheets.py  utils.py
googleapiutils/_types/: geocode.py
googleapiutils/types/: geocode.py
googleapiutils2/: __init__.py  drive.py  geocode.py  monitor.py  sheets.py  utils.py
googleapiutils2/_types/: geocode.py
googleapiutils2/admin/: CLAUDE.md  admin.py
googleapiutils2/drive/: CLAUDE.md  __init__.py  drive.py  misc.py
googleapiutils2/geocode/: CLAUDE.md  geocode.py  misc.py
googleapiutils2/groups/: CLAUDE.md  __init__.py  groups.py  misc.py
googleapiutils2/mail/: CLAUDE.md  mail.py
googleapiutils2/sheets/: CLAUDE.md  __init__.py  misc.py  sheets.py  sheets_slice.py  sheets_value_range.py
googleapiutils2/utils/: CLAUDE.md  __init__.py  decorators.py  drive.py  misc.py  utils.py
test/: conftest.py  drive.py  school_wifi_share.py  sheets.py  sheets2.py  sheets_get.py  sheets_slicing.py  sheets_slicing_2.py  tmp.py
test/drive/: conftest.py  test_drive.py
test/geocode/: conftest.py  test_geocode.py
test/sheets/: conftest.py  test_misc.py  test_sheets.py  test_sheets_slicing.py  test_sheets_update.py
